dx: rm migration setup step

--- a/packages/create-redwood-app/templates/ts/.codesandbox/tasks.json
+++ b/packages/create-redwood-app/templates/ts/.codesandbox/tasks.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://codesandbox.io/schemas/tasks.json",
   "setupTasks": [
-    "yarn install",
-    "yarn rw prisma migrate dev"
+    "yarn install"
   ],
   "tasks": {
     "dev": {
