--- a/packages/create-redwood-app/templates/ts/.codesandbox/tasks.json
+++ b/packages/create-redwood-app/templates/ts/.codesandbox/tasks.json
@@ -6,7 +6,7 @@
   "tasks": {
     "dev": {
       "name": "yarn rw dev",
-      "command": "yarn rw dev --fwd=\"--allowed-hosts all --open=false\"",
+      "command": "yarn rw dev --fwd=\"--allowed-hosts all\"",
       "runAtStart": true,
       "preview": {
         "port": 8910
